Price Button On All Pages

--- a/intrend.html
+++ b/intrend.html
@@ -82,8 +82,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/police-unit-k-9?cid=2759&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -105,8 +104,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-if-you-call-one-dog-you-in?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -128,8 +126,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/husky-2945?cid=2752&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 2-->
@@ -152,8 +149,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-life-is-too-short-to-just?cid=2739&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -175,8 +171,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/beware-of-dog-4503?cid=2756&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -198,13 +193,12 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-someone-say-walk?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 3-->
     <article>
-      <img src="https://i.imgur.com/Pv59X3H.png" alt="tshirt photo">
+      <img src="https://i.imgur.com/5awfRNC.png" alt="tshirt photo">
       <div class="text">
         <h3>New</h3>
         <p></p>
@@ -222,8 +216,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/the-world-is-my-canvas-2019?cid=2744&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -245,8 +238,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/i-love-my-dog-7671?cid=2739&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -268,8 +260,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-my-therapist-has-paws-and?cid=103391&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 4-->
@@ -292,8 +283,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/daisy-the-flower-dog?tsmac=store&tsmic=dog-lover-graphic-design&pid=2&cid=6046&sid=front"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -315,8 +305,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/golden-retriever-4834?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -338,8 +327,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/puppy-dog-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design&cid=2740"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 5 -->
@@ -362,8 +350,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/we-must-speak-for-those-who-ca?cid=103391&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -385,8 +372,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/mother-of-dogs-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -408,8 +394,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-i-do-that?cid=101361&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
 
@@ -433,8 +418,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/police-unit-k-9?cid=2759&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -456,8 +440,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-if-you-call-one-dog-you-in?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -479,8 +462,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/husky-2945?cid=2752&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 2-->
@@ -503,8 +485,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-life-is-too-short-to-just?cid=2739&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -526,8 +507,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/beware-of-dog-4503?cid=2756&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -549,8 +529,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-someone-say-walk?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 3-->
@@ -573,8 +552,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/the-world-is-my-canvas-2019?cid=2744&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -596,8 +574,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/i-love-my-dog-7671?cid=2739&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -619,8 +596,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-my-therapist-has-paws-and?cid=103391&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 4-->
@@ -643,8 +619,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/daisy-the-flower-dog?tsmac=store&tsmic=dog-lover-graphic-design&pid=2&cid=6046&sid=front"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -666,8 +641,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/golden-retriever-4834?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -689,8 +663,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/puppy-dog-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design&cid=2740"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 5 -->
@@ -713,8 +686,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/we-must-speak-for-those-who-ca?cid=103391&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -736,8 +708,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/mother-of-dogs-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -759,8 +730,7 @@
           <button class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-i-do-that?cid=101361&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>    
 
