--- a/women.html
+++ b/women.html
@@ -82,8 +82,7 @@
             <button type="button" class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/police-unit-k-9?cid=2759&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -105,8 +104,7 @@
           <button type="button" class="btn pink">P</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-if-you-call-one-dog-you-in?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -128,8 +126,7 @@
           <button type="button" class="btn blue">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/husky-2945?cid=2752&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 2-->
@@ -152,8 +149,7 @@
           <button type="button" class="btn pink">P</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-life-is-too-short-to-just?cid=2739&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -175,8 +171,7 @@
             <button type="button" class="btn pink">P</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/beware-of-dog-4503?cid=2756&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -198,8 +193,7 @@
                 <button type="button" class="btn blue">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-someone-say-walk?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 3-->
@@ -222,8 +216,7 @@
                     <button type="button" class="btn pink">P</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/the-world-is-my-canvas-2019?cid=2744&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -245,8 +238,7 @@
                         <button type="button" class="btn grey">G</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/i-love-my-dog-7671?cid=2739&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -268,8 +260,7 @@
             <button type="button" class="btn blue">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-my-therapist-has-paws-and?cid=103391&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 4-->
@@ -292,8 +283,7 @@
                 <button type="button" class="btn pink">P</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/daisy-the-flower-dog?tsmac=store&tsmic=dog-lover-graphic-design&pid=2&cid=6046&sid=front"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -315,8 +305,7 @@
                     <button type="button" class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/golden-retriever-4834?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -337,8 +326,7 @@
           <button type="button" class="btn black">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/puppy-dog-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design&cid=2740"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 5 -->
@@ -361,8 +349,7 @@
             <button type="button" class="btn orange">O</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/we-must-speak-for-those-who-ca?cid=103391&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -384,8 +371,7 @@
                 <button type="button" class="btn yellow">Y</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/mother-of-dogs-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -405,8 +391,7 @@
           <button type="button" class="btn brown">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-i-do-that?cid=101361&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
   </main>
