--- a/men.html
+++ b/men.html
@@ -82,8 +82,7 @@
           <button type="button" class="btn black">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/police-unit-k-9?cid=2759&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -104,8 +103,7 @@
            <button type="button" class="btn black">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-if-you-call-one-dog-you-in?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -126,8 +124,7 @@
           <button type="button" class="btn orange">O</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/husky-2945?cid=2752&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 2-->
@@ -149,8 +146,7 @@
           <button type="button" class="btn blue">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-life-is-too-short-to-just?cid=2739&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -169,8 +165,7 @@
         <br>
         <br>
         <p></p>
-        <a href="https://teespring.com/fr/beware-of-dog-4503?cid=2756&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -189,8 +184,7 @@
         <br>
         <br>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-someone-say-walk?cid=2753&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 3-->
@@ -210,8 +204,7 @@
         <br>
         <br>
         <p></p>
-        <a href="https://teespring.com/fr/the-world-is-my-canvas-2019?cid=2744&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -233,8 +226,7 @@
           <button type="button" class="btn black">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/i-love-my-dog-7671?cid=2739&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -256,8 +248,7 @@
           <button type="button" class="btn orange">O</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-my-therapist-has-paws-and?cid=103391&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 4-->
@@ -279,8 +270,7 @@
           <button type="button" class="btn black">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/daisy-the-flower-dog?tsmac=store&tsmic=dog-lover-graphic-design&pid=2&cid=6046&sid=front"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p5 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -302,8 +292,7 @@
           <button type="button" class="btn brown">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/golden-retriever-4834?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -324,8 +313,7 @@
           <button type="button" class="btn black">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/puppy-dog-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design&cid=2740"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p6 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <!-- partial:index.partial.html 5 -->
@@ -348,8 +336,7 @@
           <button type="button" class="btn blue">B</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/we-must-speak-for-those-who-ca?cid=103391&page=1&pid=46&sid=front&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p7 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -371,8 +358,7 @@
           <button type="button" class="btn red">R</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/mother-of-dogs-september-2019?page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p9 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
     <article>
@@ -394,8 +380,7 @@
           <button type="button" class="btn orange">O</button>
         </div>
         <p></p>
-        <a href="https://teespring.com/fr/new-did-i-do-that?cid=101361&page=1&pid=46&tsmac=store&tsmic=dog-lover-graphic-design"
-           class="btn btn-primary block">Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></a>
+        <h2 class="p8 btn btn-primary block"><span>Add To Cart&nbsp<i class="fas fa-cart-arrow-down"></i></span></h2>
       </div>
     </article>
   </main>
